--- a/medai/dicom_processor/templates/dicom_processor/dicomstudy_detail.html
+++ b/medai/dicom_processor/templates/dicom_processor/dicomstudy_detail.html
@@ -230,7 +230,7 @@
                 </tr>
                 <tr>
                     <th>ID пациента</th>
-                    <td>{{ object.patient_id|default:"Анонимизировано" }}</td>
+                    <td>{{ object.patient_id|default:"Не указано" }}</td>
                 </tr>
                 <tr>
                     <th>Пол</th>
